# sae-llm

./: .gitignore  README.md  pyproject.toml
experiments/create-datasets/: prepare_sycophancy_dataset.py
experiments/create-idk-dataset/: answer_trivia_qa.py  process_sft_data.py
experiments/general/: download_hf.py  run_qwen.py
