[project]
name = "sae-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=2.19.1",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
